# pylegere

./: .gitignore  README.md  build.zig  build.zig.zon  pyproject.toml
src/: lib.zig
