[build-system]
requires = ["pyoz"]
build-backend = "pyoz.backend"

[project]
name = "pylegere"
version = "0.1.0"
description = "A Python extension module built with PyOZ"
requires-python = ">=3.12"
readme = "README.md"

[tool.pyoz]
# Path to your Zig source file
module-path = "src/lib.zig"

# Optimization level for release builds: "Debug", "ReleaseSafe", "ReleaseFast", "ReleaseSmall"
optimize = "ReleaseFast"

# Native module name (defaults to project name)
# Use "_name" prefix to separate the .so from a Python wrapper package
# module-name = "_mymodule"

# Strip debug symbols in release builds
strip = true

# File extensions to include from py-packages (default: .py only)
# Use ["*"] to include all files
# include-ext = ["py", "zig", "json"]

# Linux platform tag for wheel builds (default: "linux_x86_64" or "linux_aarch64")
# Use manylinux tags only if building in a manylinux container
linux-platform-tag = "manylinux_2_17_x86_64"
